@@ -3,6 +3,10 @@ Alpha 3:
 - [Change] Increase hooks break strength with respect to Unity 5 physics change.
 - [Internal] Migrate from `Part.rb` to `Part.Rigidbody` to handle parts with no rigidbody (e.g. radial adapter).
 
-Alpha 4 (candidate):
-- [Enhancement] MInor changes in parts descriptions.
+Alpha 4:
+- [Enhancement] Minor changes in parts descriptions.
 - [Internal] Report mod's version when showing pre-release warning.
+
+Alpha 5 (candidate):
+- [Internal] On eject set collision detection mode to CONTINUES to not punch thru the collider.
+
